--- a/config/config.env
+++ b/config/config.env
@@ -3,5 +3,5 @@ LOG_CHANNEL = -1001583148608
 PROTECT_CONTENT = False
 ALLOW_PUBLIC = False
 AUTO_DELETE = 10
-FSUB = -1001966076767 -1001318129232
+FSUB = -1001318129232
 ADMINS = 1101724431
