--- a/config/config.env
+++ b/config/config.env
@@ -1,7 +1,7 @@
 DB_CHANNEL = -1001711788925
 LOG_CHANNEL = -1001583148608
 PROTECT_CONTENT = False
-ALLOW_PUBLIC = False
-AUTO_DELETE = 10
+ALLOW_PUBLIC = True
+AUTO_DELETE = 1
 FSUB = -1001318129232
 ADMINS = 1101724431
